--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
-This game attaches great importance to the protection of user privacy, before you use the services provided by this game, please read the following statement carefully.
-
-The information obtained during your use of the service will collect information about your device and how you and your device interact with the game and the service. Such information includes:
-1.Equipment and application information. Such as device name, device identification number, device activation time, application version, device and application Settings.
-2.Log information. When you use the service or view the content provided by us, we will automatically collect some information and store it in the log, such as service access time, access times, access IP, event information and so on.
-3.Location information, when accessing some location-based services, is collected and used to process the ambiguous or exact location of your device, which is obtained through the GPS WLAN and the network ID of the service provider.
-4.Access the system album. In this game, the screenshots of the game will be saved into the system album and the pictures in the system album will be selected into the game, all of which are completed through the user's subjective operation.
-
-We strictly abide by the provisions of laws and regulations and the agreement with users, and use the information collected for the following purposes. If we use your information beyond the following purposes, we will explain it to you again with your consent.
-1.Meet your individual needs. For example, language Settings, location Settings, personalized help services
-2.Product development and service optimization. For example, when our system fails, we will record and analyze the information generated when the system fails and optimize our services.
-3.Evaluate and improve the effectiveness of our promotional and promotional activities.
-
-Revision of privacy policy:
-This game often changes the privacy policy. If there is any change in the policy on the use of users' personal information, we will inform users in a timely manner.
-
-Questions and Suggestions:
-If you have any other questions or Suggestions, please let us know.
+This game attaches great importance to the protection of user privacy, before you use the services provided by this game, please read the following statement carefully.<br>
+<br>
+The information obtained during your use of the service will collect information about your device and how you and your device interact with the game and the service. Such information includes:<br>
+1.Equipment and application information. Such as device name, device identification number, device activation time, application version, device and application Settings.<br>
+2.Log information. When you use the service or view the content provided by us, we will automatically collect some information and store it in the log, such as service access time, access times, access IP, event information and so on.<br>
+3.Location information, when accessing some location-based services, is collected and used to process the ambiguous or exact location of your device, which is obtained through the GPS WLAN and the network ID of the service provider.<br>
+4.Access the system album. In this game, the screenshots of the game will be saved into the system album and the pictures in the system album will be selected into the game, all of which are completed through the user's subjective operation.<br>
+<br>
+We strictly abide by the provisions of laws and regulations and the agreement with users, and use the information collected for the following purposes. If we use your information beyond the following purposes, we will explain it to you again with your consent.<br>
+1.Meet your individual needs. For example, language Settings, location Settings, personalized help services<br>
+2.Product development and service optimization. For example, when our system fails, we will record and analyze the information generated when the system fails and optimize our services.<br>
+3.Evaluate and improve the effectiveness of our promotional and promotional activities.<br>
+<br>
+Revision of privacy policy:<br>
+This game often changes the privacy policy. If there is any change in the policy on the use of users' personal information, we will inform users in a timely manner.<br>
+<br>
+Questions and Suggestions:<br>
+If you have any other questions or Suggestions, please let us know.<br>
